# gazebo_car_sim_package

./: .gitignore  README.md  environment.yml  package.xml  params.yaml  run_sim_gui.sh  run_sim_server.sh  setup.py  setup_sim.sh  sim_server.launch.py
bag_files/rosbag2_2026_01_19-16_27_19/: metadata.yaml  rosbag2_2026_01_19-16_27_19_0.db3
bag_files/subset/: metadata.yaml  subset_0.db3
ddpg_algorithm/: actor.py  critic.py  ddpg_agent.py  env_node.py  frame_stack.py  odom_to_tf_publisher.py  ou_noise.py  service_node.py  test_driver.py  train.py
launch/: sim_server.launch.py
models/: generate_textures.py
models/goal/: goal.sdf  model.config
models/ground_plane/: ground_plane.sdf  model.config
models/map_wall/: map_wall.sdf  model.config
models/my_car_world/: my_car_world.sdf
models/obstacles/box/: box.sdf  model.config
models/obstacles/wall/: model.config  wall.sdf
worlds/my_car_world/: my_car_world.config  my_car_world.sdf
worlds/my_car_world/car/: car.sdf  model.config
worlds/my_car_world/chassis/: chassis.sdf  model.config
worlds/my_car_world/knuckle/: knuckle.sdf  model.config
worlds/my_car_world/tire/: model.config  tire.sdf
